@@ -1,5 +1,5 @@
 [versions]
-crate_server = 0.46.5
+crate_server = 0.47.4
 
 zc.buildout = 2.2.0
 zc.recipe.egg = 2.0.0
