@@ -5,6 +5,8 @@ Changes for crash
 Unreleased
 ==========
 
+ - Fix: query duration was rounded incorrectly to second precision
+
 2015/02/11 0.11.2
 =================
 
